@@ -1,3 +1,7 @@
+2005-12-14  Julien Puydt  <jpuydt@free.fr>
+
+	* src/sound_handling.cpp: Fixed sound events. Hello Linus!
+
 2005-12-14  Damien Sandras  <dsandras@gnome.org>
 
 	* src/misc.cpp: Fixed double-free.
